# EchoBot

./: .dockerignore  .gitignore  .gitlab-ci copy.v1  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.debug.yml  docker-compose.yml  get_soundcloud_token.sh  pyproject.toml  start_services.py
LLM/: __init__.py  llm_init.py  llm_utils.py
app_logging/: logger.py
config/: config.py  schedule.json
config/agent_data/: AI_Robotics_topics.json  Agent.json  Agent_chat_rules.json  Agent_knowledge.json  Agent_music_style.json  Web3_topics.json  Youtube_disclaimer.json
ffmpeg_stream/: README.md  main.py  run.sh
scripts/: check_media.py  get_youtube_refresh_token.py  obs_collect_media.py  server_env_example.env  setup_server_media.sh
services/api/: index.html
services/api/src/: main.py
services/chat_youtube_service/: Dockerfile  README.md  pyproject.toml
services/chat_youtube_service/src/: api.py  chat_module.py  main.py
services/chat_youtube_service/src/agent/: graph.py  prompts.py  state.py
services/chat_youtube_service/src/youtube/: exceptions.py  models.py  module.py
services/chat_youtube_service/tests/: test_chat_interactive.py
services/event_notifier_service/: __init__.py
services/music_service/: Dockerfile  README.md  pyproject.toml
services/news_service/: README.md  audio_utils.py  generate_news.py
services/obs_stream_service/: Dockerfile  Media_Playlist_Source_Plugin_README.md  README.md  __init__.py  const.py  obs_scenes.json  pyproject.toml  requirements.txt
tests/: test_echobot.py
video/: video_load.py
voice/: generate.py
(+40 files in other folders)
