[project]
name = "chat-youtube-service"
version = "0.0.1"
description = "Youtube chat for EchoBot."
authors = [
    { name = "xymanchick, xyagent, wotori" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "langgraph>=0.2.55",
    "langchain-core>=0.2.22",
    "langchain-community>=0.3.9",
    "langchain-google-genai>=1.0.0",
    "langchain-mistralai>=0.1.0",
    "langchain-together>=0.1.0",
    "langchain-openai>=0.1.1",
    "openai>=1.12.0",
    "httpx>=0.28.1",
    "python-dotenv==1.0.1",
    "config==0.5.1",
    "google-api-python-client==2.131.0",
    "protobuf>=5.27.2",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "elevenlabs==2.8.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"